feat(porter): add api for known envs and services
